<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/forecast_single_background"
    android:padding="5dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/forecast_single_date_text"
        android:textStyle="bold"
        android:id="@+id/forecast_single_text_view_day" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/forecast_single_image_view_condition"
            android:src="@drawable/default_condition"
            android:layout_gravity="center" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/forecast_single_min_max_text"
                android:textStyle="italic"
                android:id="@+id/forecast_single_text_view_high_low" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/forecast_single_temp_description"
                android:id="@+id/forecast_single_text_view_description" />

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/forecast_single_precipitation_text"
        android:id="@+id/forecast_single_text_view_precipitation" />

</LinearLayout>