
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/weather_background"
    tools:context=".WeatherActivity"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/weather_activity_relative_layout_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@drawable/circle_shape"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@null"
            android:id="@+id/weather_activity_image_view_condition_icon"
            android:scaleType="fitXY"
            android:src="@drawable/default_condition"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/weather_activity_temperature_text"
            android:textSize="45sp"
            android:textColor="@android:color/white"
            android:id="@+id/weather_activity_text_view_temperature"
            android:layout_below="@+id/weather_activity_image_view_condition_icon"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:text="@string/weather_activity_temp_description"
            android:id="@+id/weather_activity_text_view_condition"
            android:layout_below="@+id/weather_activity_text_view_temperature"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/weather_activity_location"
            android:id="@+id/weather_activity_text_view_location"
            android:layout_above="@+id/weather_activity_image_view_condition_icon"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/weather_activity_current_condition_text"
            android:textColor="@android:color/white"
            android:id="@+id/textView"
            android:layout_above="@+id/weather_activity_text_view_location"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/weather_activity_precipitation_text"
            android:id="@+id/weather_activity_text_view_precipitation"
            android:layout_below="@+id/weather_activity_text_view_condition"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/weather_activity_tap_to_forecast_note"
            android:id="@+id/textView2"
            android:textColor="@android:color/white"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

</LinearLayout>